@@ -2,6 +2,10 @@ fwknop-2.6.10 (11//2016):
     - [server] Add MAX_FW_TIMEOUT to access.conf stanzas to allow a maximum
       number of seconds for client-specified timeouts in SPA packets. This
       fixes issue #226 which was spotted by Jeremiah Rothschild.
+    - [server] Bug fix in CMD_EXEC mode to make sure to call exit() upon any
+      error from execvpe(). Without this fix, additional fwknopd processes
+      would be started upon a user specifying a command without the necessary
+      permissions. This bug was reported by Stephen Isard.
 
 fwknop-2.6.9 (06/08/2016):
     - (Jonathan Bennett) Added support for the SHA3 "Keccak" algorithm
